<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Xilu-x</string>

    <string name="uto_1">隐藏入口1</string>
    <string name="uto_2">隐藏入口2</string>
    <string name="uto_3">隐藏入口3</string>
    <string name="uto_4">隐藏入口4</string>
    <string name="uto_5">隐藏入口5</string>
    <string name="uto_6">隐藏入口6</string>
    <string name="uto_7">隐藏入口7</string>
    <string name="uto_8">隐藏入口8</string>
    
    <string name="a_1">下载</string>
    <string name="a_2">应用</string>
    <string name="a_3">模块</string>
    <string name="a_4">网络</string>
    <string name="a_5">查看</string>
    
    <string name="apps1">Xml</string>
    <string name="apps2">设置</string>
    <string name="apps3">Xoxo</string>
    
    <string name="apps4">Main</string>
    <string name="apps5">进入</string>
    <string name="apps6">main</string>
    
    
</resources>