<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
  <shortcut
    android:shortcutId="settings"
    android:enabled="true"
    android:icon="@drawable/ic_settings"
    android:shortcutShortLabel="@string/apps1"
    android:shortcutLongLabel="@string/apps2"
    android:shortcutDisabledMessage="@string/apps3">
    <intent
      android:action="android.intent.action.VIEW"
      android:targetPackage="com.android.kvc.xiao.v2.miui"
      android:targetClass="com.android.kvc.xiao.v2.miui.activity.Apps1" />
    <!-- If your shortcut is associated with multiple intents, include them
         here. The last intent in the list determines what the user sees when
         they launch this shortcut. -->
    <categories android:name="android.shortcut.conversation" />
    <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
  </shortcut>
  <shortcut
    android:shortcutId="main"
    android:enabled="true"
    android:icon="@drawable/ic_apps"
    android:shortcutShortLabel="@string/apps4"
    android:shortcutLongLabel="@string/apps5"
    android:shortcutDisabledMessage="@string/apps6">
    <intent
      android:action="android.intent.action.VIEW"
      android:targetPackage="com.android.kvc.xiao.v2.miui"
      android:targetClass="com.android.kvc.xiao.v2.miui.MainActivity" />
    <!-- If your shortcut is associated with multiple intents, include them
         here. The last intent in the list determines what the user sees when
         they launch this shortcut. -->
    <categories android:name="android.shortcut.conversation" />
    <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
  </shortcut>
  <!-- Specify more shortcuts here. -->
</shortcuts>